--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_ROUTE=https://api.dev.cloud.barbooksaustralia.com/code-challenge
+VITE_API_ROUTE=https://api.dev.cloud.barbooksaustralia.com/code-challenge
